fix padding and spacing for header button bar

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -10,11 +10,25 @@
   margin-bottom: 100px;
 
   &__menu {
-    width: 100%;
+    width: calc(100% - 40px);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 25px;
+
+    &__buttons {
+      display: flex;
+      gap: 30px;
+    }
+
+    @media (min-width: $medium-width) {
+      width: calc(100% - 144px);
+      padding-top: 50px;
+    }
+
+    @media (min-width: $large-width) {
+      width: calc(100% - 240px);
+    }
   }
 
   @media (min-width: $medium-width) {
